--- a/nexter/src/sass/components/_components.scss
+++ b/nexter/src/sass/components/_components.scss
@@ -1,6 +1,35 @@
 .realtors {
-  background-color: $color-grey-light-2;
+  background-color: $color-secondary;
   grid-column: col-start 7 / -1;
+  padding: 3.2rem;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  grid-row-gap: 2rem;
+
+  &__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    grid-column-gap: 1.6rem;
+    grid-row-gap: 5vh;
+    align-items: center;
+  }
+
+  &__img {
+    width: 5.6rem;
+    border-radius: 50%;
+    display: block;
+  }
+
+  &__details {
+  }
+
+  &__sold {
+    font-size: 1.4rem;
+    line-height: 1;
+    color: $color-grey-light-2;
+  }
 }
 
 .features {
