--- a/nexter/src/sass/base/_base.scss
+++ b/nexter/src/sass/base/_base.scss
@@ -1,6 +1,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 56%;
+  }
 }
 
 *,
@@ -63,9 +67,9 @@ a {
 }
 
 .heading-1 {
-  font-size: 4rem;
+  font-size: 4.8rem;
   color: $color-grey-light-1;
-  line-height: 1;
+  line-height: 1.4;
 }
 
 .heading-2 {
