--- a/nexter/src/sass/components/_components.scss
+++ b/nexter/src/sass/components/_components.scss
@@ -8,12 +8,25 @@
   justify-items: center;
   grid-row-gap: 2rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+    padding: 4.8rem 3.2rem;
+  }
+
   &__list {
     display: grid;
     grid-template-columns: min-content max-content;
     grid-column-gap: 1.6rem;
     grid-row-gap: 5vh;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: min-content max-content;
+    }
   }
 
   &__img {
@@ -22,7 +35,10 @@
     display: block;
   }
 
-  &__details {
+  &__details:not(:last-of-type) {
+    @media only screen and (max-width: $bp-medium) {
+      margin-inline-end: 1.2rem;
+    }
   }
 
   &__sold {
@@ -41,6 +57,11 @@
   grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
   grid-gap: 6.4rem;
   align-items: start;
+
+  @media only screen and (max-width: $bp-medium) {
+    margin: 0;
+    padding: 9.6rem 0;
+  }
 }
 
 .feature {
@@ -72,10 +93,16 @@
         rgba($color-primary, 0.5)
       ),
       url("../assets/back.jpg");
+    background-size: cover;
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 6.4rem;
+    }
   }
 
   &__img--1 {
@@ -83,6 +110,11 @@
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem hsla(0, 0%, 0%, 0.1);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-row: 1 / -1;
+      grid-column: 1 / 5;
+    }
   }
 
   &__img--2 {
@@ -91,6 +123,11 @@
     grid-column: 4 / 7;
     z-index: 2;
     box-shadow: 0 2rem 5rem hsla(0, 0%, 0%, 0.1);
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 100%;
+      grid-row: 1 / -1;
+    }
   }
 
   &__content {
@@ -98,15 +135,15 @@
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
     padding: 4rem 8vw;
-
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // align-items: flex-start;
-
     display: grid;
     align-content: center;
     justify-items: start;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+      padding: 7.2rem 8vw;
+    }
   }
 
   &__label {
