--- a/nexter/src/sass/layout/_layout.scss
+++ b/nexter/src/sass/layout/_layout.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content minmax(min-content, 40vw) repeat(
+  grid-template-rows: 100vh min-content minmax(min-content, 40vw) repeat(
       3,
       min-content
     );
@@ -8,6 +8,20 @@
     [sidebar-start] 6.4rem [sidebar-end full-start] minmax(6.4rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end] minmax(6.4rem, 1fr) [full-end];
+
+  @media only screen and (max-width: $bp-large) {
+    grid-template-rows:
+      6rem calc(100vh - 6rem) min-content minmax(min-content, 40vw)
+      repeat(3, min-content);
+    grid-template-columns:
+      [full-start] minmax(6.4rem, 1fr)
+      [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+      [center-end] minmax(6.4rem, 1fr) [full-end];
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-rows: 6rem calc(100vh - 6rem);
+  }
 }
 
 .sidebar {
@@ -17,6 +31,15 @@
   display: flex;
   justify-content: center;
   padding-block-start: 1.2rem;
+
+  @media only screen and (max-width: $bp-large) {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    align-items: center;
+    padding-block-start: 0;
+    padding-inline-end: 2rem;
+    justify-content: flex-end;
+  }
 
   &__icon {
     width: 3.2rem;
@@ -35,11 +58,19 @@
   background-position: center;
   background-size: cover;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
   justify-content: center;
   grid-row-gap: 1.6rem;
   padding: 6.4rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 4.8rem;
+  }
 
   &__logo {
     width: 18rem;
@@ -73,15 +104,29 @@
 
     &-logos {
       justify-self: center;
-      display: flex;
+      display: grid;
+      grid-template-columns: repeat(4, max-content);
+      grid-column-gap: 6.4rem;
+      justify-items: center;
+      align-items: center;
+
+      @media only screen and (max-width: $bp-largest) {
+        grid-column-gap: 5.6rem;
+      }
+
+      @media only screen and (max-width: $bp-large) {
+        grid-column-gap: 4.4rem;
+      }
+
+      @media only screen and (max-width: $bp-medium) {
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 3.2rem;
+      }
     }
 
     &-logo {
-      height: 2.4rem;
-
-      &:not(:last-of-type) {
-        margin-inline-end: 4rem;
-      }
+      max-height: 2.4rem;
+      max-width: 100%;
     }
   }
 }
@@ -92,6 +137,11 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
   grid-gap: 6.4rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    margin: 0;
+    padding: 9.6rem 0;
+  }
 }
 
 .home-card {
